tests/typescript/pos/simple/glob-00.ts
var glob:number /*@ { number | v > 10 } */ = 12;

