tests/typescript/neg/simple/obj-00.ts

/*@ x :: { f : { number | v > 10 } } */ 
var x = { f: 1 };
 
